tests/Scrutinizer/Tests/Analyzer/Php/SecurityAdvisoryChecker/deps_with_advisories.test
{
    "hash": "6289683ea4b9a6d1d15dd65d38942078",
    "packages": [
        {
            "name": "doctrine/common",
            "version": "2.3.0",
            "source": {
                "type": "git",
                "url": "https://github.com/doctrine/common",
                "reference": "2.3.0"
            },
            "dist": {
                "type": "zip",
                "url": "https://github.com/doctrine/common/zipball/2.3.0",
                "reference": "2.3.0",
                "shasum": ""
            },
            "require": {
                "php": ">=5.3.2"
            },
            "time": "2012-09-19 22:55:18",
            "type": "library",
            "extra": {
                "branch-alias": {
                    "dev-master": "2.3.x-dev"
                }
            },
            "autoload": {
                "psr-0": {
                    "Doctrine\\Common": "lib/"
                }
            },
            "notification-url": "https://packagist.org/downloads/",
            "license": [
                "MIT"
            ],
            "authors": [
                {
                    "name": "Jonathan Wage",
                    "email": "jonwage@gmail.com",
                    "homepage": "http://www.jwage.com/"
                },
                {
                    "name": "Guilherme Blanco",
                    "email": "guilhermeblanco@gmail.com",
                    "homepage": "http://www.instaclick.com"
                },
                {
                    "name": "Roman Borschel",
                    "email": "roman@code-factory.org"
                },
                {
                    "name": "Benjamin Eberlei",
                    "email": "kontakt@beberlei.de"
                },
                {
                    "name": "Johannes Schmitt",
                    "email": "schmittjoh@gmail.com",
                    "homepage": "https://github.com/schmittjoh",
                    "role": "Developer of wrapped JMSSerializerBundle"
                }
            ],
            "description": "Common Library for Doctrine projects",
            "homepage": "http://www.doctrine-project.org",
            "keywords": [
                "annotations",
                "collections",
                "eventmanager",
                "persistence",
                "spl"
            ]
        },
        {
            "name": "symfony/symfony",
            "version": "v2.1.0",
            "source": {
                "type": "git",
                "url": "git://github.com/symfony/symfony.git",
                "reference": "v2.1.0"
            },
            "dist": {
                "type": "zip",
                "url": "https://github.com/symfony/symfony/archive/v2.1.0.zip",
                "reference": "v2.1.0",
                "shasum": ""
            },
            "require": {
                "doctrine/common": ">2.2,<2.4-dev",
                "php": ">=5.3.3",
                "twig/twig": ">=1.9.1,<2.0-dev"
            },
            "replace": {
                "symfony/browser-kit": "self.version",
                "symfony/class-loader": "self.version",
                "symfony/config": "self.version",
                "symfony/console": "self.version",
                "symfony/css-selector": "self.version",
                "symfony/dependency-injection": "self.version",
                "symfony/doctrine-bridge": "self.version",
                "symfony/dom-crawler": "self.version",
                "symfony/event-dispatcher": "self.version",
                "symfony/filesystem": "self.version",
                "symfony/finder": "self.version",
                "symfony/form": "self.version",
                "symfony/framework-bundle": "self.version",
                "symfony/http-foundation": "self.version",
                "symfony/http-kernel": "self.version",
                "symfony/locale": "self.version",
                "symfony/monolog-bridge": "self.version",
                "symfony/options-resolver": "self.version",
                "symfony/process": "self.version",
                "symfony/propel1-bridge": "self.version",
                "symfony/routing": "self.version",
                "symfony/security": "self.version",
                "symfony/security-bundle": "self.version",
                "symfony/serializer": "self.version",
                "symfony/swiftmailer-bridge": "self.version",
                "symfony/templating": "self.version",
                "symfony/translation": "self.version",
                "symfony/twig-bridge": "self.version",
                "symfony/twig-bundle": "self.version",
                "symfony/validator": "self.version",
                "symfony/web-profiler-bundle": "self.version",
                "symfony/yaml": "self.version"
            },
            "require-dev": {
                "doctrine/data-fixtures": "1.0.*",
                "doctrine/dbal": ">=2.2,<2.4-dev",
                "doctrine/orm": ">=2.2.3,<2.4-dev",
                "monolog/monolog": "dev-master",
                "propel/propel1": "dev-master"
            },
            "time": "2012-09-06 09:01:56",
            "type": "library",
            "extra": {
                "branch-alias": {
                    "dev-master": "2.1-dev"
                }
            },
            "autoload": {
                "psr-0": {
                    "Symfony": "src/",
                    "SessionHandlerInterface": "src/Symfony/Component/HttpFoundation/Resources/stubs"
                }
            },
            "notification-url": "https://packagist.org/downloads/",
            "license": [
                "MIT"
            ],
            "authors": [
                {
                    "name": "Fabien Potencier",
                    "email": "fabien@symfony.com"
                },
                {
                    "name": "Symfony Community",
                    "homepage": "http://symfony.com/contributors"
                }
            ],
            "description": "The Symfony PHP framework",
            "homepage": "http://symfony.com",
            "keywords": [
                "framework"
            ]
        },
        {
            "name": "twig/twig",
            "version": "v2222.12.2",
            "source": {
                "type": "git",
                "url": "git://github.com/fabpot/Twig.git",
                "reference": "v2222.12.2"
            },
            "dist": {
                "type": "zip",
                "url": "https://api.github.com/repos/fabpot/Twig/zipball/v2222.12.2",
                "reference": "v2222.12.2",
                "shasum": ""
            },
            "require": {
                "php": ">=5.2.4"
            },
            "time": "2013-02-09 18:21:53",
            "type": "library",
            "extra": {
                "branch-alias": {
                    "dev-master": "2222.12-dev"
                }
            },
            "autoload": {
                "psr-0": {
                    "Twig_": "lib/"
                }
            },
            "notification-url": "https://packagist.org/downloads/",
            "license": [
                "BSD-3"
            ],
            "authors": [
                {
                    "name": "Fabien Potencier",
                    "email": "fabien@symfony.com"
                },
                {
                    "name": "Armin Ronacher",
                    "email": "armin.ronacher@active-4.com"
                }
            ],
            "description": "Twig, the flexible, fast, and secure template language for PHP",
            "homepage": "http://twig.sensiolabs.org",
            "keywords": [
                "templating"
            ]
        }
    ],
    "packages-dev": null,
    "aliases": [

    ],
    "minimum-stability": "stable",
    "stability-flags": [

    ]
}

-- FILENAME --
composer.lock

-- CONFIG --
tools:
    sensiolabs_security_checker: true

-- COMMENTS --
Line 74: There are 3 security advisories for your installed version of symfony/symfony: